# api-data-flow

./: .dockerignore  NEWS.md  README.md  build.sh  dockerfile  main.py  pyproject.toml  run.sh
.github/workflows/: ruff.yml
census/python/: url.py
census/r/: variables.r
data/: acs-api.parquet
data/raw/: census-api.csv  multi-geo.csv
data/targets/: acs-api.parquet  census-api.csv
data/variables/: acs_2023_acs1.parquet  acs_2023_acs5.parquet
src/: helpers.py  local.py  make_acs_targets.py  testing-api-data.py
src/acs/: api.py  etl.py  post.py
src/api/: acs.py
src/api-data-flow/: env.py  etl.py  fetch.py  main.py
src/flow/: etl.py  main.py
src/marimo/: explore.py
src/modeler/: main.py
src/roll/: main.py  snapshot.py
src/wrangle/: csv.py
