[project]
name = "api-data-flow"
version = "0.1.0"
description = "Manage public data flow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sodapy>=2.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
